--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
   <title>Hello World</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" type="text/javascript"></script>
-</head>
 
-<body>
-  <h1>Hello World</h1>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <div class="container-fluid">
+      <h1 class="text-primary">Welcome to my Gallery!</h1>
+      <p> This is the Fallout 4 gallary. We specialize in fun memories from Fallout 4.</p>
+    </div>
+
+    <div class="container">
+      <img src = "fallout-img.jpg" class="img-fluid">
+    </div>
 
 
 
