added more fun colors

--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 
   <body>
 
-    <div class="container-fluid">
-      <h1 class="text-primary">Welcome to my Gallery!</h1>
-      <p> This is the Fallout 4 gallary. We specialize in fun memories from Fallout 4.</p>
+    <div class="container-fluid bg-info">
+      <h1 class="text-primary-emphasis display-1">Welcome to the Fallout 4 Gallery!</h1>
+      <p class="lead">This is the <span class="fst-italic">Fallout 4</span> gallery. We specialize in fun memories from Fallout 4.</p>
     </div>
 
     <div class="container">
-      <img src = "fallout-img.jpg" class="img-fluid">
+      <img src = "fallout-img.jpg" class="img-fluid img-thumbnail">
+    </div>
+
+    <div class="container-fluid bg-dark text-light bg-gradient"> 
+      <p class="small text-center">Created by Caleb Fisher</p>
     </div>
 
 
