finished the main grid

--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
       <img src = "fallout-img.jpg" class="img-fluid img-thumbnail">
     </div>
 
+
+
+    <div class="container">
+      <h2>Check out our art:</h2>
+      <div class="row">
+        <div class="col border"><img src="falloutpicture1.png" class="img-fluid img-thumbnail"></div>
+        <div class="col border"><img src="falloutimage2.webp" class="img-fluid img-thumbnail"></div>
+        <div class="col border"><img src="falloutimage3.jpg" class="img-fluid img-thumbnail"></div>
+      </div>
+      <div class="row">
+      <div class="col border"><img src="falloutimage4.jpg" class="img-fluid img-thumbnail"></div>
+      <div class="col border"><img src="falloutimage5.avif" class="img-fluid img-thumbnail"></div>
+      </div>
+      <div class="row">
+        <div class="col border"><div class="col border"><img src="falloutimage6.jpg" class="img-fluid img-thumbnail"></div></div>
+        <div class="col border"><div class="col border"><img src="falloutimage7.jpg" class="img-fluid img-thumbnail"></div></div>
+        <div class="col border"><div class="col border"><img src="falloutimage8.webp" class="img-fluid img-thumbnail"></div></div>
+        <div class="col border"><div class="col border"><img src="falloutimage9.jpeg" class="img-fluid img-thumbnail"></div></div>
+      </div>
+    </div>
+
+
     <div class="container-fluid bg-dark text-light bg-gradient"> 
       <p class="small text-center">Created by Caleb Fisher</p>
     </div>
