we made a button

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 
     <div class="container-fluid bg-info">
       <h1 class="text-primary-emphasis display-1">Welcome to the Fallout 4 Gallery!</h1>
+      <span class="badge text-bg-success">NEW!</span>
       <p class="lead">This is the <span class="fst-italic">Fallout 4</span> gallery. We specialize in fun memories from Fallout 4.</p>
+      <button class="btn btn-secondary">Learn more</button>
     </div>
 
-    <div class="container">
+    <div class="container p-3">
       <img src = "fallout-img.jpg" class="img-fluid img-thumbnail">
     </div>
 
-
-
-    <div class="container">
+    <div class="container mt-3 p-3">
       <h2>Check out our art:</h2>
       <div class="row">
         <div class="col border"><img src="falloutpicture1.png" class="img-fluid img-thumbnail"></div>
         <div class="col border"><img src="falloutimage2.webp" class="img-fluid img-thumbnail"></div>
         <div class="col border"><img src="falloutimage3.jpg" class="img-fluid img-thumbnail"></div>
       </div>
-      <div class="row">
+      <div class="row p-3">
       <div class="col border"><img src="falloutimage4.jpg" class="img-fluid img-thumbnail"></div>
       <div class="col border"><img src="falloutimage5.avif" class="img-fluid img-thumbnail"></div>
       </div>
@@ -45,7 +45,7 @@
     </div>
 
 
-    <div class="container-fluid bg-dark text-light bg-gradient"> 
+    <div class="container-fluid mt-3 p-3 bg-dark text-light bg-gradient"> 
       <p class="small text-center">Created by Caleb Fisher</p>
     </div>
 
